# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2

  19 Sep 2007; Roy Marples <uberlord@gentoo.org>:

    plugin hook function is now rc_plugin_hook instead of a name based
	on the name of the plugin.

  18 Sep 2007; Roy Marples <uberlord@gentoo.org>:

    Only mount /sys if it's not mounted, #192436.

    API changes!

    rc_ls_dir, rc_get_config and rc_get_list no longer take a starting list
    as a first argument. Instead, use rc_strlist_join to append or prepend
    the new list to an existing list.

    rc_strlist_add and friends now take char *** instead of char ** and
    return a pointer to the item added instead of the new list head. This is
    so we can easily tell if the item was successfully added or not instead
    of iterating through the list looking for it. 
	
    list = rc_strlist_add (list, item);
    becomes
    rc_strlist_add (&list, item);

  17 Sep 2007; Roy Marples <uberlord@gentoo.org>:

    Document the preferance of wpa_supplicant, #192828.

  09 Sep 2007; Mike Frysinger <vapier@gentoo.org>:

    Allow people to specify a list of dirs to clean in bootmisc #191807.  Force
    the +t bit on /tmp and /var/tmp paths.

  04 Sep 2007; Roy Marples <uberlord@gentoo.org>:

    start-stop-daemon now works with userids correctly when a pidfile
    is not specified, #191206.

  02 Sep 2007; Mike Frysinger <vapier@gentoo.org>:

    Always attempt to mount /dev/pts when devpts is available as it may appear
    in some 2.4 setups.

* baselayout-2.0.0_rc4 (02 Sep 2007)

  02 Sep 2007; Roy Marples <uberlord@gentoo.org>:

    RC_TTY_NUMBER now defaults to 12, #190996 thanks to Pacho Ramos.

  31 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    Only generate dependencies for Gentoo scripts, #190547.

  28 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    Undocument pause action, fix --nodeps and --ifstarted, #190045.
    Fix ksoftlevel handling, #190420.
