@@ -1,4 +1,4 @@
-DIR   = /$(LIB)/rcscripts/net 
+DIR   = $(RC_LIB)/net 
 FILES = adsl.sh apipa.sh arping.sh bonding.sh br2684ctl.sh bridge.sh \
 	ccwgroup.sh clip.sh ifconfig.sh ifplugd.sh ip6to4.sh ipppd.sh \
 	iproute2.sh iwconfig.sh netplugd.sh pppd.sh pump.sh tuntap.sh \
