@@ -41,6 +41,7 @@ CFLAGS += -pedantic -std=c99 \
 
 DESTDIR =
 LIB = lib
+RC_LIB = /$(LIB)/rc
 
 # Set PAM = pam for pam support
 PAM = 
@@ -134,13 +135,13 @@ install: $(TARGET)
 	install -m 0755 -d $(DESTDIR)/sbin
 	install -m 0755 $(SBIN_TARGETS) $(DESTDIR)/sbin
 	ln -sf rc-update $(DESTDIR)/sbin/update-rc
-	install -m 0755 -d $(DESTDIR)/$(LIB)/rcscripts/conf.d
-	install -m 0644 $(SYS_WHITELIST) $(DESTDIR)/$(LIB)/rcscripts/conf.d
-	install -m 0755 -d $(DESTDIR)/$(LIB)/rcscripts/bin
+	install -m 0755 -d $(DESTDIR)/$(RC_LIB)/conf.d
+	install -m 0644 $(SYS_WHITELIST) $(DESTDIR)/$(RC_LIB)/conf.d
+	install -m 0755 -d $(DESTDIR)/$(RC_LIB)/bin
 	for x in $(BINLINKS); do ln -sf ../sbin/rc $(DESTDIR)/bin/$$x; done
 	for x in $(SBINLINKS); do ln -sf rc $(DESTDIR)/sbin/$$x; done
-	for x in $(RCLINKS); do ln -sf ../../../sbin/rc $(DESTDIR)/$(LIB)/rcscripts/bin/$$x; done
-	if test "$(PAM)" != "pam" ; then \
+	for x in $(RCLINKS); do ln -sf ../../../sbin/rc $(DESTDIR)/$(RC_LIB)/bin/$$x; done
+	if test "$(PAM)" = "pam" ; then \
 		install -m 0755 -d $(DESTDIR)/etc/pam.d ; \
 		install -m 0644 start-stop-daemon.pam $(DESTDIR)/etc/pam.d/start-stop-daemon ; \
 	fi
